<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/save_menu_title"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:id="@+id/action_publish"
        android:icon="@drawable/ic_public_black_24dp"
        android:title="@string/publish_menu_title"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete_menu_title"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_send_feedback"
        android:title="@string/send_feedback_menu_title"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout_menu_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/help_menu_title"
        app:showAsAction="never"/>
</menu>