<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.playposse.thomas.lindenmayer.activity.HelpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/sectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_about_heading"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_about_body_text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/help_wikipedia_link"/>

            <include layout="@layout/snippet_supported_grammar"/>

            <TextView
                style="@style/sectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_stochastic_heading"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_stochastic_body_text"/>

            <TextView
                style="@style/sectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_book_heading"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_book_body_text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/help_book_link"/>

            <TextView
                style="@style/sectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_contact_heading"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:text="@string/help_contact_body_text"/>

            <TextView
                style="@style/sectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_credit_heading"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/help_credit_body_text"/>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
