<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.playposse.thomas.lindenmayer.activity.PublicLibraryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.playposse.thomas.lindenmayer.ui.NotificationCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:message="@string/public_library_hint"
            app:preferenceKey="hasPublicLibraryHintBeenSeen"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rule_set_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/empty_message_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_public_rule_sets_message"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/loading_message_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/loading_message"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
